src/test/ui/parser/issue-14303-trait.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-trait.rs:3:18
   |
LL | trait Foo<'a, T, 'b> {}
   |                  ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | trait Foo<'a, 'b, T> {}
   |               ^^^ --

error: aborting due to previous error

